<resources>
    <string name="app_name">Expenses</string>
    <string name="user_name">Enter Your Username</string>
    <string name="user_pwd">Your Password</string>
    <string name="btn_login">Enter</string>
    <string name="user_regname">Enter your full name</string>
    <string name="user_regEmail">Your email@email.com</string>
    <string name="user_regContactNum">Contact number example: +60123456789</string>
    <string name="user_regDOB">Your DOB eg: 27/8/2000</string>
    <string name="user_expanses">Expanse For</string>
    <string name="user_date">10/11/2024</string>
    <string name="user_range">RM</string>
    <string name="btn_save">Save</string>
    <string name="nav_open">Open Navigation</string>
    <string name="nav_close">Close Navigation</string>
    <string name="user_total">Total</string>
    <string name="att">Attendance</string>

    <string-array name="state_arrays">
        <item>Melaka</item>
        <item>Selangor</item>
        <item>Johor</item>
        <item>Negeri Sembilan</item>
        <item>Pahang</item>
        <item>Terengganu</item>
        <item>Kedah</item>
        <item>Perlis</item>
    </string-array>

</resources>