<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityExpense">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextExpanses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/user_expanses" />

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:ems="10"
                android:hint="@string/user_date"
                android:inputType="date" />

            <EditText
                android:id="@+id/editTextTotal"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:ems="10"
                android:hint="@string/user_range"
                android:inputType="text" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:autofillHints="none"/>

            <EditText
                android:id="@+id/edtExpValue"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:ems="10"
                android:inputType="text"
                android:hint="Total"/>

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/imgExp"
                android:layout_width="match_parent"
                android:layout_height="398dp"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/btn_save" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>